User-profile & User-card & Email changes

--- a/assets/postcss/components/_select-custom.css
+++ b/assets/postcss/components/_select-custom.css
@@ -12,7 +12,7 @@
     &.select-bg-transition {
       .select-items,
       .select-selected {
-        @apply bg-white-light  text-white;
+        @apply bg-white-light text-white dark:text-white;
       }
       .select-selected {
         @apply after:border-t-white;
