--- a/html/template/button.html
+++ b/html/template/button.html
@@ -1009,26 +1009,29 @@
                 <div class="card-header pb-2 header-bottom-border">
                   <div class="flex flex-col">
                     <h3 class="text-lg font-bold">Buttons</h3>
-                    <p>Use</p><strong>.btn </strong> class to add btn.
+                    <p>Use<strong>.btn </strong> class to add btn.</p>
                     <div class="preview-code tab-links">
                       <button class="p-0 tab tab-lifted tab-active tab-link" data-tabFilter="1">Preview  </button>
-                      <button class="p-0 tab tab-lifted tab-link tab-2" data-tabFilter="2">Html
-                        <div class="card-body">
-                          <div class="tabs-content">
-                            <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
-                              <div class="flex flex-wrap gap-2">
-                                <button class="btn btn-primary text-white hover:-translate-y-1 hover:transition-all hover:ease-in-out">Primary</button>
-                                <button class="btn btn-secondary text-white hover:-translate-y-1 hover:transition-all hover:ease-in-out">Secondary</button>
-                                <button class="btn btn-info text-white hover:-translate-y-1 hover:transition-all hover:ease-in-out">Info</button>
-                                <button class="btn btn-success text-white hover:-translate-y-1 hover:transition-all hover:ease-in-out">Success</button>
-                                <button class="btn btn-warning text-white hover:-translate-y-1 hover:transition-all hover:ease-in-out">Warning</button>
-                                <button class="btn btn-danger text-white hover:-translate-y-1 hover:transition-all hover:ease-in-out">Danger</button>
-                                <button class="btn btn-light text-title hover:-translate-y-1 hover:transition-all hover:ease-in-out">Light </button>
-                              </div>
-                            </div>
-                            <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                              <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
-                              <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt; 
+                      <button class="p-0 tab tab-lifted tab-link tab-2" data-tabFilter="2">Html</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="card-body">
+                  <div class="tabs-content">
+                    <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
+                      <div class="flex flex-wrap gap-2">
+                        <button class="btn btn-primary text-white hover:-translate-y-1 hover:transition-all hover:ease-in-out">Primary</button>
+                        <button class="btn btn-secondary text-white hover:-translate-y-1 hover:transition-all hover:ease-in-out">Secondary</button>
+                        <button class="btn btn-info text-white hover:-translate-y-1 hover:transition-all hover:ease-in-out">Info</button>
+                        <button class="btn btn-success text-white hover:-translate-y-1 hover:transition-all hover:ease-in-out">Success</button>
+                        <button class="btn btn-warning text-white hover:-translate-y-1 hover:transition-all hover:ease-in-out">Warning</button>
+                        <button class="btn btn-danger text-white hover:-translate-y-1 hover:transition-all hover:ease-in-out">Danger</button>
+                        <button class="btn btn-light text-title hover:-translate-y-1 hover:transition-all hover:ease-in-out">Light </button>
+                      </div>
+                    </div>
+                    <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt; 
    &lt;button class="text-white btn btn-primary hover:-translate-y-1 hover:transition-all hover:ease-in-out"&gt;Primary&lt;/button&gt; 
    &lt;button class="text-white btn btn-secondary hover:-translate-y-1 hover:transition-all hover:ease-in-out"&gt;Secondary&lt;/button&gt;
    &lt;button class="text-white btn btn-info hover:-translate-y-1 hover:transition-all hover:ease-in-out"&gt;Info&lt;/button&gt; 
@@ -1037,10 +1040,6 @@
    &lt;button class="text-white btn btn-danger hover:-translate-y-1 hover:transition-all hover:ease-in-out"&gt;Danger&lt;/button&gt;
    &lt;button class="btn btn-light text-title"&gt;Light&lt;/button&gt; 
 &lt;/div&gt; </code></pre>
-                            </div>
-                          </div>
-                        </div>
-                      </button>
                     </div>
                   </div>
                 </div>
@@ -1444,7 +1443,7 @@
         </div>
         <div class="py-[4px] dark:bg-mode-200">
           <div class="px-[15px] py-7  h-[calc(100vh_-_139px)] overflow-auto ">
-            <ul class="flex flex-col gap-7 mode-event">  
+            <ul class="flex flex-col gap-7 mode-event">
               <li>
                 <div>
                   <h5 class="leading-none text-dark text-sm font-semibold">Template Mode</h5><span class="leading-none text-content text-xs font-medium">Choose template mode dark & light</span>
