--- a/html/template/edit-profile.html
+++ b/html/template/edit-profile.html
@@ -1017,7 +1017,7 @@
                       <div class="card-body"> 
                         <div class="user-detail flex flex-col gap-4 items-center">
                           <div class="flex items-center gap-5 2sm:gap-2">
-                            <div class="avatar rounded-full w-20 2sm:w-16 2sm:h-16 h-20 p-[2px] bg-white"><img class="rounded-full" src="../../assets/images/avatar/38.jpg" alt="girl in yellow jacket"></div>
+                            <div class="avatar rounded-full w-20 2sm:w-16 2sm:h-16 h-20 p-[2px] bg-white dark:bg-sidebar-dark2"><img class="rounded-full" src="../../assets/images/avatar/38.jpg" alt="girl in yellow jacket"></div>
                           </div>
                           <div class="flex flex-col gap-2">
                             <div class="text-center"> 
@@ -1425,7 +1425,7 @@
         </div>
         <div class="py-[4px] dark:bg-mode-200">
           <div class="px-[15px] py-7  h-[calc(100vh_-_139px)] overflow-auto ">
-            <ul class="flex flex-col gap-7 mode-event">  
+            <ul class="flex flex-col gap-7 mode-event">
               <li>
                 <div>
                   <h5 class="leading-none text-dark text-sm font-semibold">Template Mode</h5><span class="leading-none text-content text-xs font-medium">Choose template mode dark & light</span>
