--- a/html/template/email.html
+++ b/html/template/email.html
@@ -1000,15 +1000,15 @@
           </aside>
         </div>
         <!-- Sidebar End -->
-        <!-- Page Body Start-->
+        <!-- Page Body Start -->
         <div class="page-body">
           <div class="grid grid-cols-12 email-main lg:gap-0 gap-card-gap">
             <div class="col-span-3 xl:col-span-4"> 
               <!-- email left sidebar Start -->
               <div class="card gap-0 lg:z-10 2xl:p-card-spacing lg:p-3 left-sidebar-aside z-[3] lg:w-[280px] sticky min-lg:top-0 sm:w-[269px] lg:fixed lg:h-[100vh]">
-                <div class="flex justify-between">   
+                <div class="flex justify-between">
                   <div class="flex items-center gap-3 mb-4 sm:gap-1">
-                    <div class="avatar"> 
+                    <div class="avatar">
                       <div class="w-10 rounded-full"><img src="../../assets/images/avatar/2.jpg" alt="avatar"></div>
                     </div>
                     <div>
@@ -1016,12 +1016,12 @@
                       <div class="flex items-center gap-1 mt-1"><span class="text-content3 text-2xs">alan.Dmitriy@Groshev</span></div>
                     </div>
                   </div>
-                  <button class="hidden lg:flex left-sidebar-toggle">  <i class="w-5 h-5 stroke-title" data-feather="x"> </i></button>
+                  <button class="hidden lg:flex left-sidebar-toggle"> <i class="w-5 h-5 stroke-title" data-feather="x"></i></button>
                 </div>
                 <label class="button-label btn-primary flex gap-2 items-center justify-center w-full text-sm" for="modal-16">
                   <svg class="w-[1.125rem] h-[1.125rem] stroke-white"> 
                     <use href="../../assets/svg/sprite.svg#Message"> </use>
-                  </svg>New Mail 
+                  </svg>New Mail
                 </label>
                 <div class="mt-4 bg-gray-light dark:bg-sidebar-dark2 lg:h-full">
                   <ul class="flex flex-col gap-0">
@@ -1096,7 +1096,7 @@
                 <div class="flex items-center justify-between pb-3 pl-2 border-b 2xl:p-card-spacing border-border-light  dark:border-b dark:border-border-dark  2sm:flex-col-reverse 2sm:gap-4 2sm:items-start ">
                   <div class="flex gap-2 items-center">
                     <div class="flex items-center gap-1"> 
-                      <label class="checkbox w-[18px] h-[18px]"> 
+                      <label class="checkbox w-[18px] h-[18px]">
                         <input class="peer" type="checkbox">
                         <div class="checkbox-indicator peer-checked:!bg-primary peer-checked:!border-primary !border-content3"> <i data-feather="check"></i></div>
                       </label>
@@ -1406,8 +1406,8 @@
                     <div class="flex items-center justify-between sm:items-start sm:gap-2 sm:flex-col">
                       <div class="flex items-center gap-1"><i class="w-4 h-4 stroke-title" data-feather="paperclip"></i><span class="text-sm font-semibold text-content3 uppercase">Attachment (60 MB)</span></div>
                       <div class="flex items-center gap-1">
-                        <button class="btn btn-light text-xs py-2 text-chart-dark">View All</button>
-                        <button class="btn btn-light text-xs py-2 text-primary">Download All</button>
+                        <button class="dark:bg-sidebar-dark2 btn btn-light text-xs py-2 text-chart-dark">View All</button>
+                        <button class="dark:bg-sidebar-dark2 btn btn-light text-xs py-2 text-primary">Download All</button>
                       </div>
                     </div>
                     <div class="flex gap-4 items-center flex-wrap"><img class="max-w-[180px] h-[115px] object-cover" src="../../assets/images/email-app/1.png" alt="flower"><img class="max-w-[180px] h-[115px] object-cover" src="../../assets/images/email-app/2.png" alt="emoji"><img class="max-w-[180px] h-[115px] object-cover" src="../../assets/images/email-app/3.png" alt="marble"></div>
@@ -1440,7 +1440,7 @@
         </div>
         <div class="py-[4px] dark:bg-mode-200">
           <div class="px-[15px] py-7  h-[calc(100vh_-_139px)] overflow-auto ">
-            <ul class="flex flex-col gap-7 mode-event">  
+            <ul class="flex flex-col gap-7 mode-event">
               <li>
                 <div>
                   <h5 class="leading-none text-dark text-sm font-semibold">Template Mode</h5><span class="leading-none text-content text-xs font-medium">Choose template mode dark & light</span>
@@ -1511,11 +1511,11 @@
         <input class="peer" id="modal-16" name="modal-16" type="checkbox">
         <label class="modal-overlay peer-checked:block" for="modal-16"></label>
         <div class="modal modal-bottom-right invisible w-11/12 max-w-xl transition-all duration-1000 translate-y-0 opacity-0 peer-checked:opacity-100 peer-checked:visible peer-checked:-translate-y-9 !right-[2%]">
-          <div class="modal-header"> 
+          <div class="modal-header dark:bg-sidebar-dark2">
             <h3>New Message</h3>
-            <label for="modal-16"> <i class="w-4 h-4 stroke-title" data-feather="x"></i></label>
+            <label for="modal-16"><i class="w-4 h-4 stroke-title" data-feather="x"></i></label>
           </div>
-          <div class="modal-body 2sm:!py-2"> 
+          <div class="modal-body 2sm:!py-2 dark:bg-sidebar-dark2">
             <form>
               <div class="border-b border-border-light py-3 flex items-center leading-7 2sm:flex-col 2sm:items-start">
                 <div class="min-w-[70px]">
@@ -1549,7 +1549,7 @@
               </div>
             </form>
           </div>
-          <div class="modal-footer">
+          <div class="modal-footer dark:bg-sidebar-dark2">
             <div class="flex items-center justify-between gap-2">
               <ul class="flex items-center gap-3">
                 <li class="leading-none border-r border-border-light pr-2"> 
@@ -1559,7 +1559,7 @@
                     </svg>
                   </label>
                 </li>
-                <li class="leading-none"> 
+                <li class="leading-none">
                   <div class="dropdown dropdown-top"><i class="w-5 h-5 cursor-pointer stroke-title" data-feather="more-vertical"></i>
                     <div class="dropdown-menu !w-fit !p-1">
                       <ul class="flex flex-col cursor-pointer text-start !gap-1">
