--- a/assets/postcss/pages/_steps.css
+++ b/assets/postcss/pages/_steps.css
@@ -22,7 +22,7 @@
 
       &:before,
       &:after {
-        @apply bg-gray-100 dark:bg-light text-dark leading-none;
+        @apply bg-gray-100 dark:bg-sidebar-dark2 text-dark leading-none;
       }
 
       &.step-primary {
