--- a/html/template/product.html
+++ b/html/template/product.html
@@ -1031,7 +1031,7 @@
             <div class="col-span-8 xl:col-span-7 md:col-span-12">
               <div> 
                 <div class="flex items-center gap-2 justify-between">
-                  <h3 class="leading-none font-semibold 3xl:flex 3xl:justify-between 3xl:items-center text-title mb-3">Women's Latest Bags Collections</h3><a class="btn bg-gray-light p-2" href="add-product.html"><i class="w-4 h-4 stroke-title" data-feather="plus"></i></a>
+                  <h3 class="leading-none font-semibold 3xl:flex 3xl:justify-between 3xl:items-center text-title mb-3">Women's Latest Bags Collections</h3><a class="btn bg-gray-light dark:bg-sidebar-dark2 p-2" href="add-product.html"><i class="w-4 h-4 stroke-title" data-feather="plus"></i></a>
                 </div>
                 <div class="flex items-center gap-3 mb-3 flex-wrap"><span class="text-content3 text-xs leading-none border-r border-border-light rtl:border-r-0 rtl:border-l rtl:pr-unset rtl:pl-3 pr-3">#15704 </span>
                   <p class="text-title text-xs leading-none font-semibold border-r border-border-light rtl:border-r-0 rtl:border-l rtl:pr-unset rtl:pl-3 pr-3"> <span class="text-content3 text-xs leading-none">Seller: </span>Backy Fashion              </p>
@@ -1173,7 +1173,7 @@
         </div>
         <div class="py-[4px] dark:bg-mode-200">
           <div class="px-[15px] py-7  h-[calc(100vh_-_139px)] overflow-auto ">
-            <ul class="flex flex-col gap-7 mode-event">  
+            <ul class="flex flex-col gap-7 mode-event">
               <li>
                 <div>
                   <h5 class="leading-none text-dark text-sm font-semibold">Template Mode</h5><span class="leading-none text-content text-xs font-medium">Choose template mode dark & light</span>
